Fixed subheader wrapping

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -159,6 +159,7 @@
     font-weight: normal;
     float: left;
     color: #727272;
+    white-space: nowrap;
   }
 }
 
